# robotino

./: Dockerfile  README.md  entrypoint.sh  run_docker.sh
robotino_bringup/: package.xml  setup.cfg  setup.py
robotino_bringup/launch/: robotino_bringup.launch.py  robotino_gazebo.launch.py  spawn_robotino_sdf.launch.py
robotino_bringup/robotino_bringup/: spawn_robotino.py
robotino_bringup/rviz/: ros2.rviz
robotino_description/: CMakeLists.txt  README.md  package.xml
robotino_description/models/4Walls/: model.config  model.sdf
robotino_description/models/robotino_description/: model.config  robotino_platform_kinect.sdf
robotino_description/models/robotino_world/: model.config
robotino_description/urdf/: Readme.md  robotino_platform_kinect.urdf  robotino_platform_kinect.urdf.xacro
robotino_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  camera.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro
robotino_description/worlds/: playground.world
